@@ -19,12 +19,18 @@ New: Ready Check
 
 Ready Check Available Tracking
 * Food
+** Feast of Cooperation (All) - High
+** Kelari Expedition Cherry Cake (Mage, Cleric) - Medium
+** Kelari Expedition Chocolate Cake (Warrior, Rogue) - Medium
 ** Farclan Cherry Cake (Mage, Cleric) - Medium
 * Weapon Stones
 ** Burning Powerstone (Mage, Cleric) - High
 ** Flaring Glyph (Mage, Cleric) - Medium
 * Potions/Vials
 ** Herioc Brightsurge Vial (Mage, Cleric) - High
+* Other/Armor
+** Performance Insoles (All) - High
+** Cusioned Insoles (All) - High
 
 System
 * New: Added a new slash command /kbmbuffs. You can macro this with %t or manually type a name to return a list of buffs with KBM ID's on that Unit. (Players or NPC's)
